--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
     <script src="https://kit.fontawesome.com/82245a89d3.js" crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Burhan Kocadag - Open Source website</title>
-  </head>
+    <title>Shivay Infotech</title>                               
+  </head> 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
